--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ torch = "^1.10.0"
 numpy = "1.21.1"
 torchvision = "^0.11.1"
 torchaudio = "^0.10.0"
+wandb = "^0.12.5"
 
 [tool.poetry.dev-dependencies]
 
