--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ numpy = "1.21.1"
 torchvision = "^0.11.1"
 torchaudio = "^0.10.0"
 wandb = "^0.12.5"
+pandas = "^1.3.4"
+PyYAML = "^6.0"
+python-dotenv = "^0.19.1"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 
