--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -5,6 +5,8 @@ learning_rate: 1e-3
 dataloader_num_workers: 4
 weight_decay: 1e-3
 
+val_split = 0.3
+
 melspec_sample_rate: 16000
 melspec_n_mels: 64
 melspec_n_fft: 512
