--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -5,10 +5,12 @@ learning_rate: 1e-3
 dataloader_num_workers: 4
 weight_decay: 1e-3
 
-val_split = 0.3
+val_split: 0.3
 
 melspec_sample_rate: 16000
 melspec_n_mels: 64
 melspec_n_fft: 512
 melspec_hop_length: 128
 melspec_f_max: 4000
+specaug_freq_mask_param: 5,
+specaug_time_mask_param: 5,
