--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^1.3.4"
 PyYAML = "^6.0"
 python-dotenv = "^0.19.1"
 sklearn = "^0.0"
+matplotlib = "^3.4.3"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 
