--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -1,14 +1,15 @@
-num_epochs: 20,
+num_epochs: 20
 batch_size: 256
 random_seed: 13
-learning_rate: 1e-3
+learning_rate: 0.001
 dataloader_num_workers: 4
-weight_decay: 1e-3
+weight_decay: 0.001
 
 val_split: 0.3
 
-img_padding_length: 2000
+starting_n_filters: 32
 
+img_padding_length: 2000
 melspec_sample_rate: 16000
 melspec_n_mels: 64
 melspec_n_fft: 512
